--- a/ex1-login-page/index.html
+++ b/ex1-login-page/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS Framework (Tailwind) Exercise 1</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CSS Framework (Tailwind) Exercise 1</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  <body class="bg-slate-200 flex items-center justify-center h-screen">
+    <div class="bg-white p-8 rounded-xl">
+      <div class="text-zinc-600 text-xl mb-4">Login to Website</div>
 
-<body>
-  <!-- Start coding here -->
-</body>
+      <div class="flex justify-between">
+        <label for="email">Email:</label>
+        <input
+          class="border border-zinc-600 p-2 focus:outline-none focus:border-violet-300 hover:border-violet-500 rounded-lg"
+          type="email"
+          id="email"
+          name="email"
+          required
+        />
+      </div>
+      <br />
 
+      <div class="flex justify-between">
+        <label for="password">Password:</label>
+        <input
+          class="border border-zinc-600 p-2 focus:outline-none focus:border-violet-300 hover:border-violet-500 rounded-lg"
+          type="password "
+          id="password "
+          name="password"
+          required
+        />
+      </div>
+      <br />
+
+      <button
+        class="w-36 p-2 bg-violet-500 text-white rounded-full focus:outline-none active:bg-violet-600 hover:bg-violet-400 focus:ring focus:ring-violet-300"
+      >
+        Sign In
+      </button>
+      <button
+        class="w-36 p-2 bg-white border text-violet-500 border-white rounded-full focus:outline-none hover:bg-violet-100 focus:ring focus:ring-violet-300 focus:text-violet-600"
+      >
+        Sign Up
+      </button>
+    </div>
+  </body>
 </html>
